syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.syllo.scrimmage";

package RLTestMsgs;

message Reward {
    int32 sender_id = 1;
    int32 sender_team_id = 2;
    int32 reward = 3;
    int32 obs_size = 4;
    int32 action_space_size = 5;
}
